# algos_visualization

./: CMakeLists.txt  build.sh  build_from_scratch.sh  config.json  debug.sh  readme.md  release.sh  todo.md
source/: glm_include.hpp  main.cpp  maze.cpp  maze.hpp  parameters.cpp  parameters.hpp  random_utils.cpp  random_utils.hpp  universal_launch.hpp  util.hpp
source/algos/: A_star.hpp  BFS.hpp  DFS.hpp  a_star.hpp  dijkstra.hpp  search_algos_util.hpp
source/algvis/: customization.hpp  main.cpp  parameters.cpp  parameters.hpp
source/combo_app/: app_actions.cpp  app_actions.hpp  gui.cpp  gui.hpp  main.cpp
source/designer/: gui.cpp  gui.hpp  main.cpp
source/maze/: binary_tree_generation.cpp  generation_parameters.hpp  maze.cpp  maze.hpp  maze_generation.hpp  random_dfs_generation.cpp  sidewinder_generation.cpp  white_noise_generation.cpp
source/util/: magic_enum_inc.h  overload_macros.h  parameter.hpp  random_utils.cpp  util.hpp
source/visual/: allegro_util.cpp  allegro_util.hpp  grid.cpp  grid.hpp  imgui_inc.hpp  imgui_widgets.hpp
